# SmartZ

./: .gitignore  main.py  pyproject.toml
codepage_pkg/: README.md  example.py  integration_example.py  pyproject.toml  setup.py
codepage_pkg/codepage_pkg/: __init__.py  codepage.py
codepage_pkg/tests/: __init__.py  test_codepage.py  test_gui.py
src/: SmartZip.ini  context_menu.py  main.py
src/pagez/: README.md  __init__.py  __main__.py  main.py  pyproject.toml  setup.py  smart_extract.py  test_codepage.py
src/pagez/core/: api.py  codepage_info.py  logger_config.py  smart_detector.py  utils.py
src/pagez/docs/: optimization_guide.md
src/pagez/test/: quick_test.py  test_refactor.py  test_regex_optimization.py
src/pagez/utils/: archive_encoding_detector.py  fix_zip_encoding.py  ftfyt.py  generate_corruption_dictionary.py  test_corruption_dictionary.py  zip_filename_decoder.py
src/smartz/: config.py  encoding_detector.py  gui.py  smartzip.py  utils.py
