[project]
name = "smartz"
version = "3.4.0"
description = "SmartZip - 7-zip功能扩展工具的Python实现"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyperclip>=1.8.0",
    "send2trash>=1.8.0",
    "pywin32>=306; sys_platform == 'win32'",
    "langdetect>=1.0.9",
    "charset-normalizer>=3.4.2",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
# smartzip = "main:main"
pagez = "pagez.__main__:main"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pagez"]
package-dir = {"" = "src"}
[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
